# rlm-code

./: .env.example  README.md  pyproject.toml
rlm_code/: __init__.py  __main__.py  config.py  engine.py  llm.py  prompt.py  tools.py  tui.py
tests/: test_engine.py  test_tools.py
