[project]
name = "rlm-code"
version = "0.1.0"
description = "An interactive coding CLI"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.20.0",
    "textual>=3.0.0",
    "rich",
    "python-dotenv",
]

[project.scripts]
rlm-code = "rlm_code:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
